--- a/depd100/pubspec.yaml
+++ b/depd100/pubspec.yaml
@@ -59,9 +59,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/kuromi-2.jpg
+    - images/kuromi-3.jpg
+    - images/kuromi-4.jpg
+    - images/kuromi-5.jpg
+    - images/kuromi.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
